# codex-rlm

./: README.md
codex-rs/: Cargo.toml  README.md
codex-rs/cli/src/: main.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: codex.rs  lib.rs  rlm_session.rs  rlm_sub_agent.rs
codex-rs/core/src/config/: mod.rs  profile.rs  schema.rs  types.rs
codex-rs/core/src/models_manager/: model_info.rs
codex-rs/core/src/rollout/: policy.rs
codex-rs/core/src/state/: session.rs
codex-rs/core/src/tools/: parallel.rs  registry.rs  spec.rs
codex-rs/core/src/tools/handlers/: mod.rs  rlm_exec.rs  rlm_helpers.rs  rlm_load.rs  rlm_load_append.rs  rlm_memory.rs  rlm_query.rs  rlm_types.rs
codex-rs/core/tests/suite/: cli_stream.rs  rmcp_client.rs  tool_parallelism.rs  truncation.rs
codex-rs/exec/src/: event_processor_with_human_output.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/protocol/: Cargo.toml
codex-rs/protocol/src/: protocol.rs
codex-rs/rlm/: Cargo.toml  INSTALL.md  INTEGRATION_PLAN.md
codex-rs/rlm/src/: config.rs  context.rs  cost.rs  error.rs  index.rs  lib.rs  policy.rs  python.rs  routing.rs
codex-rs/rlm/tests/: config_merge.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: chatwidget.rs  cli.rs  slash_command.rs
codex-rs/tui/src/chatwidget/: agent.rs  tests.rs
codex-rs/tui/src/status/: card.rs  mod.rs  rlm.rs  tests.rs
docs/: config.md  rlm-runtime-spec.md
