[package]
name = "codex-rlm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bm25 = "2.3"
ignore = "0.4"
regex = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
memmap2 = { version = "0.9" }
pyo3 = { version = "0.27.2", features = ["abi3-py311", "auto-initialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
codex-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
